<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">widget-practice</string>
    <string name="title_activity_main">widget-practice</string>
    <string name="package_name">io.ionic.starter</string>
    <string name="custom_url_scheme">io.ionic.starter</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="app_widget_name">Github Notification Inbox</string>
    <string name="app_widget_updated_at">마지막 업데이트: %1$s</string>
    <string name="empty_view_text">1. Open App\n2. Remove Token if already exist\n3. Save Token</string>
    <string name="configuration_header">Query Params</string>
    <string name="all_description">show marked as read</string>
    <string name="participating_description">show directly participating or mentioned</string>
    <string name="page_hint">page</string>
    <string name="per_page_hint">perpage</string>
    <string name="since_hint">since(ex:2022-05-30T23:11:11Z)</string>
    <string name="before_hint">before(ex:2022-12-25T05:23:11Z)</string>
    <string name="configuration_confirm_button_text">완료</string>
</resources>
