<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Android.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Android.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/widgetGithubIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/app_widget_description"
                android:padding="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_github" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="7"
                android:orientation="vertical"
                android:weightSum="10">

                <TextView
                    android:id="@+id/widgetTitle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:gravity="top"
                    android:text="@string/app_widget_name"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/widgetUpdatedAt"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:gravity="bottom"
                    android:text="@string/app_widget_updated_at"
                    android:textSize="10dp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/widgetSyncIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_widget_description"
                android:minWidth="48dp"
                android:padding="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_sync_24" />

            <ProgressBar
                android:id="@+id/widgetSyncIconRotate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_widget_description"
                android:indeterminateDrawable="@drawable/ic_baseline_sync_24_rotate_anticlockwise"
                android:minWidth="48dp"
                android:padding="2dp"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/widgetSettingIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_widget_description"
                android:minWidth="48dp"
                android:padding="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_settings_24" />
        </LinearLayout>

        <ListView
            android:id="@+id/widgetList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_transparent"
            android:gravity="center"
            android:text="@string/empty_view_text"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>